# bfviewer

./: CMakeLists.txt  README.md  index.html  params.json
build_aux/cmake/Modules/: FindBIGFOOT.cmake  FindECGLIB.cmake  FindGSL.cmake  FindQWT.cmake  FindSIGPROC.cmake  FindTICPP.cmake  FindWFDB.cmake  FindZIPLIB.cmake
resources/: LICENSE  resources.qrc
src/: CMakeLists.txt  bfviewer.cfg  config.hpp.cmake  gridplot.cpp  gridplot.h  gridplot.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui
